--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,18 @@
-<hi>Assignment-2</hi>
+<!doctype html>
+<html>
+  <head>
+    <title>States of Matter</title>
+  </head>
+  <body>
+    <h1>States of Matter</h1>
+    <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae temporibus esse suscipit nisi ad.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, doloribus eos perspiciatis.</p>
+    <footer>
+      <hr>
+      <p style="text-align: center;"
+         onclick="alert('EMAILING US IS USELESS');">
+         Tech Support: yeah.right@server-is-down.com
+      </p>
+    </footer>
+  </body>
+</html>
