--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -6,6 +6,31 @@
   </head>
   <body>
     <h1>States of Matter</h1>
+    <div class="row">
 
+      <!-- Solid -->
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <div>
+          <h3>Solid</h3>
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Liquid -->
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <div>
+          <h3>Liquid</h3>
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Gas -->
+      <div class="col-lg-4 col-md-12 col-sm-12">
+        <div>
+          <h3>Gaseous</h3>
+          <p></p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
