--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,25 +10,35 @@
 
       <!-- Solid -->
       <div class="col-lg-4 col-md-6 col-sm-12">
-        <div>
+        <div class="solid">
           <h3>Solid</h3>
-          <p></p>
+          <p>
+            A solid’s particles are packed closely together. The forces between the particles are strong enough that the particles cannot move freely; they can only vibrate. As a result, a solid has a stable, definite shape and a definite volume. Solids can only change shape under force, as when broken or cut.
+          </p>
         </div>
       </div>
 
       <!-- Liquid -->
       <div class="col-lg-4 col-md-6 col-sm-12">
-        <div>
+        <div class="liquid">
           <h3>Liquid</h3>
-          <p></p>
+          <p>
+            Liquids have definite volume (does not change) if the temperature and pressure are constant.
+Intermolecular (or interatomic or interionic) forces are such that the molecules have enough energy to move around, which makes the structure mobile.
+This means that a liquid is not definite in shape but rather conforms to the shape of its container.
+          </p>
         </div>
       </div>
 
       <!-- Gas -->
       <div class="col-lg-4 col-md-12 col-sm-12">
-        <div>
+        <div class="gas">
           <h3>Gaseous</h3>
-          <p></p>
+          <p>
+            Gas molecules have either very weak bonds or no bonds at all, so they can move freely and quickly.
+Gas molecules have enough kinetic energy that the effect of intermolecular forces is small (or zero, for an ideal gas),
+and they are spaced very far apart from each other.
+          </p>
         </div>
       </div>
     </div>
