Added content and background

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,8 +9,8 @@
     <div class="row">
 
       <!-- Solid -->
-      <div class="col-lg-4 col-md-6 col-sm-12">
-        <div class="solid">
+      <div class="col-lg-4 col-md-6 col-sm-12" id="solid">
+        <div>
           <h3>Solid</h3>
           <p>
             A solid’s particles are packed closely together. The forces between the particles are strong enough that the particles cannot move freely; they can only vibrate. As a result, a solid has a stable, definite shape and a definite volume. Solids can only change shape under force, as when broken or cut.
@@ -19,8 +19,8 @@
       </div>
 
       <!-- Liquid -->
-      <div class="col-lg-4 col-md-6 col-sm-12">
-        <div class="liquid">
+      <div class="col-lg-4 col-md-6 col-sm-12" id="liquid">
+        <di>
           <h3>Liquid</h3>
           <p>
             Liquids have definite volume (does not change) if the temperature and pressure are constant.
@@ -31,8 +31,8 @@ This means that a liquid is not definite in shape but rather conforms to the sha
       </div>
 
       <!-- Gas -->
-      <div class="col-lg-4 col-md-12 col-sm-12">
-        <div class="gas">
+      <div class="col-lg-4 col-md-12 col-sm-12" id="gas">
+        <div>
           <h3>Gaseous</h3>
           <p>
             Gas molecules have either very weak bonds or no bonds at all, so they can move freely and quickly.
