--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -20,7 +20,7 @@
 
       <!-- Liquid -->
       <div class="col-lg-4 col-md-6 col-sm-12" id="liquid">
-        <di>
+        <div>
           <h3>Liquid</h3>
           <p>
             Liquids have definite volume (does not change) if the temperature and pressure are constant.
@@ -28,6 +28,7 @@ Intermolecular (or interatomic or interionic) forces are such that the molecules
 This means that a liquid is not definite in shape but rather conforms to the shape of its container.
           </p>
         </div>
+      </div>
 
       <!-- Gas -->
       <div class="col-lg-4 col-md-12 col-sm-12" id="gas">
