--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello, World!</h1>
+<!doctype html>
+<html>
+  <head>
+    <title>Assignment Solutions</title>
+  </head>
+  <body>
+    <h1>Assignment Solutionr</h1>
+    <p>Click <a href="https://abd-01.github.io/Coursera_HTML-CSS-and-Javascript-for-Web-Developers_Assignments/module2-solution/">here</a> for Assignment-2 Solution.</p>
+  </body>
+</html>
