--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Assignment Solutions</title>
   </head>
   <body>
-    <h1>Assignment Solutionr</h1>
+    <h1>Assignment Solutions</h1>
     <p>Click <a href="https://abd-01.github.io/Coursera_HTML-CSS-and-Javascript-for-Web-Developers_Assignments/module2-solution/">here</a> for Assignment-2 Solution.</p>
   </body>
 </html>
