--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   <body>
     <h1>Assignment Solutions</h1>
     <p>Click <a href="https://abd-01.github.io/Coursera_HTML-CSS-and-Javascript-for-Web-Developers_Assignments/module2-solution/">here</a> for Assignment-2 Solution.</p>
+    
+    <!-- To be deleted Later-->
+    <p> Click <a href="Home _ SmallTalks.html">here</a></p>
   </body>
 </html>
